--- a/.github/ISSUE_TEMPLATE/add-link.yaml
+++ b/.github/ISSUE_TEMPLATE/add-link.yaml
@@ -7,7 +7,7 @@ body:
       value: |
         🙏 Thank you for taking the time to submit a new Bluesky profile to the [bluesky.ms](https://bluesky.ms) crowd sourced database!
         
-        We welcome all types of Bluesky profiles to this database related to the Microsoft community. From Microsoft IT admins, devs to MVPs and Microsoft employees.
+        We welcome all types of Bluesky profiles to this database related to the Microsoft community. From Microsoft IT admins, devs to authors, Microsoft Partners, MVPs and Microsoft employees.
         Let's make it easier to find and follow each other so we can share, learn and grow as a community.
 
         A few notes:
