--- a/.github/ISSUE_TEMPLATE/add-link.yaml
+++ b/.github/ISSUE_TEMPLATE/add-link.yaml
@@ -50,6 +50,7 @@ body:
         - data
         - dotnet
         - businessapps
+        - intune
         - microsoft365
         - security
         - windows
